Added custom messages in inventories